# myOpencvStudyCode

./: README.md
LearningOpencv3/chapter2/example2.1/: CMakeLists.txt  README.md  main.cpp
LearningOpencv3/chapter2/example2.2/: CMakeLists.txt  README.md  main.cpp
LearningOpencv3/chapter2/exercise3/: CMakeLists.txt  main.cpp
LearningOpencv3/chapter2/exercise3/data/: sampling.avi
LearningOpencv3/chapter2/exercise4/: CMakeLists.txt  main.cpp
LearningOpencv3/chapter2/exercise5/: CMakeLists.txt  main.cpp
